# bft-2023-ikbfu-test

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: static.yml
reports/: index.html
source/: exceptions.py  test_stackoverflow.py
source/configuration/: .env.sample  config.py
